[tool.poetry]
name = "py2_to_py3"
version = "0.1.0"
description = ""
authors = ["Peter Marsh <ptrthegr8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
autopep8 = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
